--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -272,7 +272,7 @@
    <string name="home_mode">Hemma</string>
    <string name="hour">tim</string>
    <string name="hour_and_min">tim/min</string>
-   <string name="how_to_config">Bekräfta att det blåa ljuset blinkar, \ n och klicka sedan på Nästa.</string>
+   <string name="how_to_config">Bekräfta att gateway blå ljus blixtrar snabbt (cirka två gånger per sekund)</string>
    <string name="hum">Luftfuktighet:</string>
    <string name="if_ok_click_next">Om bekräftat, klicka för att ange \ "Nästa \"</string>
    <string name="Illegal_demolition">Fel</string>
@@ -555,8 +555,10 @@
    <string name="choose_server">Välj område</string>
    <string name="restart_gateway">Starta om porten och omfördela nätverket</string>
     <string name="ap_connect">AP Connect</string>
-    <string name="ap_config_title">Press and hold the button for more than three seconds in the gateway one button distribution mode (fast flashing blue light about 3 times per second)</string>
+    <string name="ap_config_title">Press and hold the button for more than three seconds in the gateway one button distribution mode (fast flashing blue light about 2 times per second)</string>
    <string name="ap_title_msg">Please confirm that the gateway blue light flashes slowly (about once every 2 seconds) and then click next</string>
-   <string name="wait_connect_wifi">Connecting Wi Fi, please wait...</string>
+   <string name="wait_connect_wifi">Connecting Wi Fi, please wait…</string>
     <string name="not_find_wifi">\"No Wi Fi found at the beginning of \'ESP\' \"</string>
+    <string name="connect_device_success">Mobile phone connected to device successfully</string>
+   <string name="information_success">Successfully transferred information to device</string>
 </resources>
