--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -272,7 +272,7 @@
    <string name="home_mode">Home</string>
    <string name="hour">hour</string>
    <string name="hour_and_min">hour/min</string>
-   <string name="how_to_config">Please make sure the blue light of the connector flashes and then press "next step".</string>
+   <string name="how_to_config">Please confirm that the gateway blue light flashes rapidly (about 2 times per second)</string>
    <string name="hum">Humidity:</string>
    <string name="if_ok_click_next">If it is confirmed, click into the \"next step\".</string>
    <string name="Illegal_demolition">Illegal demolition</string>
@@ -555,8 +555,10 @@
    <string name="choose_server">Choose Region</string>
    <string name="restart_gateway">Please restart the gateway and re-config the WiFi network</string>
     <string name="ap_connect">AP Connect</string>
-    <string name="ap_config_title">Press and hold the button for more than three seconds in the gateway one button distribution mode (fast flashing blue light about 3 times per second)</string>
+    <string name="ap_config_title">Press and hold the button for more than three seconds in the gateway one button distribution mode (fast flashing blue light about 2 times per second)</string>
    <string name="ap_title_msg">Please confirm that the gateway blue light flashes slowly (about once every 2 seconds) and then click next</string>
     <string name="wait_connect_wifi">Connecting Wi Fi, please wait…</string>
     <string name="not_find_wifi">\"No Wi Fi found at the beginning of \'ESP\' \"</string>
+    <string name="connect_device_success">Mobile phone connected to device successfully</string>
+   <string name="information_success">Successfully transferred information to device</string>
 </resources>
