[what]ap配网优化，适配解决了部分手机切换WIFI无法成功的问题（小米）

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -561,4 +561,8 @@
     <string name="not_find_wifi">\"No Wi Fi found at the beginning of \'ESP\' \"</string>
     <string name="connect_device_success">Mobile phone connected to device successfully</string>
    <string name="information_success">Successfully transferred information to device</string>
+   <string name="hand_connect_wifi">Conecta el teléfono a ‘ESP_XXX’ y volver a la App</string>
+   <string name="goto_set_wifi">Configuración Wi-Fi</string>
+   <string name="device_long_time_ap">El dispositivo está en modo de red AP por mucho tiempo.</string>
+   <string name="current_ssid_is_not_correct">Ahora WiFi no es %1$s, por favor, programe manualmente y regrese a App.</string>
 </resources>
