--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -561,4 +561,8 @@
     <string name="not_find_wifi">\"No Wi Fi found at the beginning of \'ESP\' \"</string>
     <string name="connect_device_success">Mobile phone connected to device successfully</string>
    <string name="information_success">Successfully transferred information to device</string>
+   <string name="hand_connect_wifi">Forbind din telefon Wi Fi til ’ESP_XXX‘og retur til app</string>
+   <string name="goto_set_wifi">Opsætning af Wi Fi</string>
+   <string name="device_long_time_ap">Enheden har været i AP- distributionstilstand i lang tid. Start venligst enheden og prøv distribution igen</string>
+   <string name="current_ssid_is_not_correct">Den nuværende WiFi er ikke %1$s, sæt manuelt og vend tilbage til app</string>
 </resources>
