--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -561,4 +561,8 @@
     <string name="not_find_wifi">\"No Wi Fi found at the beginning of \'ESP\' \"</string>
     <string name="connect_device_success">Mobile phone connected to device successfully</string>
    <string name="information_success">Successfully transferred information to device</string>
+   <string name="hand_connect_wifi">Verbinden Sie Ihr Telefon Wi-Fi mit ’ESP_XXX‘und zurück zur App</string>
+   <string name="goto_set_wifi">Wi-Fi einrichten</string>
+   <string name="device_long_time_ap">Das Gerät ist schon lange im AP-Distributionsmodus. Bitte starten Sie das Gerät neu und versuchen Sie es erneut.</string>
+   <string name="current_ssid_is_not_correct">Das aktuelle WLAN ist nicht %1$s, bitte manuell einstellen und zur App zurückkehren</string>
 </resources>
