--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -561,4 +561,8 @@
     <string name="not_find_wifi">\"No Wi Fi found at the beginning of \'ESP\' \"</string>
     <string name="connect_device_success">Mobile phone connected to device successfully</string>
    <string name="information_success">Successfully transferred information to device</string>
+   <string name="hand_connect_wifi">Connectez le téléphone Wi-Fi à l ’ESP_XXX‘et renvoie l‘app</string>
+   <string name="goto_set_wifi">Paramétrer Wi-Fi</string>
+   <string name="device_long_time_ap">Le périphérique est en mode de réseau AP pendant de longues périodes, s’ il vous plaît redémarrez le périphérique et réessayez le réseau de distribution</string>
+   <string name="current_ssid_is_not_correct">Le Wifi actuel n ’est pas un %1$s, veuillez paramétrer manuellement puis revenir à app</string>
 </resources>
