--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -561,4 +561,8 @@
     <string name="not_find_wifi">\"No Wi Fi found at the beginning of \'ESP\' \"</string>
     <string name="connect_device_success">Mobile phone connected to device successfully</string>
    <string name="information_success">Successfully transferred information to device</string>
+   <string name="hand_connect_wifi">Verbind uw telefoon Wi Fi met ’ESP_XXX‘ en terug naar app</string>
+   <string name="goto_set_wifi">WLAN einrichten</string>
+   <string name="device_long_time_ap">Het apparaat is al lang in AP-distributiemodus. Start het apparaat opnieuw op en probeer de distributie opnieuw.</string>
+   <string name="current_ssid_is_not_correct">De huidige WiFi is niet %1$s, gelieve handmatig in te stellen en terug te keren naar app</string>
 </resources>
