--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -561,4 +561,8 @@
     <string name="not_find_wifi">\"No Wi Fi found at the beginning of \'ESP\' \"</string>
     <string name="connect_device_success">Mobile phone connected to device successfully</string>
    <string name="information_success">Successfully transferred information to device</string>
+   <string name="hand_connect_wifi">Koppla ditt Wi-Fi till ’ESP_XXX‘ och återgå till app</string>
+   <string name="goto_set_wifi">Upprätta Wi Fi</string>
+   <string name="device_long_time_ap">Enheten har varit i AP distributionsläge under lång tid. Starta om enheten och prova distributionen igen.</string>
+   <string name="current_ssid_is_not_correct">Den nuvarande WiFi är inte %1$s, ställ in manuellt och återgå till app</string>
 </resources>
