--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -561,4 +561,8 @@
     <string name="not_find_wifi">\"No Wi Fi found at the beginning of \'ESP\' \"</string>
     <string name="connect_device_success">Mobile phone connected to device successfully</string>
    <string name="information_success">Successfully transferred information to device</string>
+   <string name="hand_connect_wifi">Connect your phone WiFi to ‘ESP_XXX’and return to app</string>
+   <string name="goto_set_wifi">Set up Wi-Fi</string>
+   <string name="device_long_time_ap">The device has been in AP distribution mode for a long time. Please restart the device and try the distribution again</string>
+   <string name="current_ssid_is_not_correct">The current WiFi is not %1$s, please manually set and return to app</string>
 </resources>
