【release】更新日志:修改产品说明书功能

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -565,4 +565,5 @@
    <string name="goto_set_wifi">Paramétrer Wi-Fi</string>
    <string name="device_long_time_ap">Le périphérique est en mode de réseau AP pendant de longues périodes, s’ il vous plaît redémarrez le périphérique et réessayez le réseau de distribution</string>
    <string name="current_ssid_is_not_correct">Le Wifi actuel n ’est pas un %1$s, veuillez paramétrer manuellement puis revenir à app</string>
+    <string name="camera">Camera</string>
 </resources>
