--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -565,4 +565,5 @@
    <string name="goto_set_wifi">Nastavit Wi-Fi</string>
    <string name="device_long_time_ap">Zařízení je již dlouho v distribučním režimu AP. Prosím, restartujte zařízení a zkuste znovu distribuci.</string>
    <string name="current_ssid_is_not_correct">Aktuální WiFi není %1$s, prosím ručně nastavit a vrátit se do aplikace</string>
+    <string name="camera">Camera</string>
 </resources>
