--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -565,4 +565,5 @@
    <string name="goto_set_wifi">Opsætning af Wi Fi</string>
    <string name="device_long_time_ap">Enheden har været i AP- distributionstilstand i lang tid. Start venligst enheden og prøv distribution igen</string>
    <string name="current_ssid_is_not_correct">Den nuværende WiFi er ikke %1$s, sæt manuelt og vend tilbage til app</string>
+   <string name="camera">Camera</string>
 </resources>
