--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -565,4 +565,5 @@
    <string name="goto_set_wifi">Wi-Fi einrichten</string>
    <string name="device_long_time_ap">Das Gerät ist schon lange im AP-Distributionsmodus. Bitte starten Sie das Gerät neu und versuchen Sie es erneut.</string>
    <string name="current_ssid_is_not_correct">Das aktuelle WLAN ist nicht %1$s, bitte manuell einstellen und zur App zurückkehren</string>
+    <string name="camera">Camera</string>
 </resources>
