--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -565,4 +565,5 @@
    <string name="goto_set_wifi">Configuración Wi-Fi</string>
    <string name="device_long_time_ap">El dispositivo está en modo de red AP por mucho tiempo.</string>
    <string name="current_ssid_is_not_correct">Ahora WiFi no es %1$s, por favor, programe manualmente y regrese a App.</string>
+    <string name="camera">Camera</string>
 </resources>
