--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -565,4 +565,5 @@
    <string name="goto_set_wifi">Installa la connessione Wi-Fi</string>
    <string name="device_long_time_ap">Il dispositivo è stato in modalità di distribuzione AP da molto tempo. Si prega di riavviare il dispositivo e provare la distribuzione di nuovo</string>
    <string name="current_ssid_is_not_correct">Il WiFi corrente non è %1$s, si prega di impostare manualmente e tornare all ’app</string>
+   <string name="camera">Camera</string>
 </resources>
