--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -565,4 +565,5 @@
    <string name="goto_set_wifi">WLAN einrichten</string>
    <string name="device_long_time_ap">Het apparaat is al lang in AP-distributiemodus. Start het apparaat opnieuw op en probeer de distributie opnieuw.</string>
    <string name="current_ssid_is_not_correct">De huidige WiFi is niet %1$s, gelieve handmatig in te stellen en terug te keren naar app</string>
+    <string name="camera">Camera</string>
 </resources>
