--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -565,4 +565,5 @@
    <string name="goto_set_wifi">Upprätta Wi Fi</string>
    <string name="device_long_time_ap">Enheten har varit i AP distributionsläge under lång tid. Starta om enheten och prova distributionen igen.</string>
    <string name="current_ssid_is_not_correct">Den nuvarande WiFi är inte %1$s, ställ in manuellt och återgå till app</string>
+    <string name="camera">Camera</string>
 </resources>
