--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -566,4 +566,6 @@
    <string name="device_long_time_ap">Enheden har været i AP- distributionstilstand i lang tid. Start venligst enheden og prøv distribution igen</string>
    <string name="current_ssid_is_not_correct">Den nuværende WiFi er ikke %1$s, sæt manuelt og vend tilbage til app</string>
    <string name="camera">Camera</string>
+    <string name="user_agreement_hint">User agreement</string>
+   <string name="privacy_policy_hint">Privacy policy</string>
 </resources>
