--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -566,4 +566,6 @@
    <string name="device_long_time_ap">Das Gerät ist schon lange im AP-Distributionsmodus. Bitte starten Sie das Gerät neu und versuchen Sie es erneut.</string>
    <string name="current_ssid_is_not_correct">Das aktuelle WLAN ist nicht %1$s, bitte manuell einstellen und zur App zurückkehren</string>
     <string name="camera">Camera</string>
+    <string name="user_agreement_hint">User agreement</string>
+   <string name="privacy_policy_hint">Privacy policy</string>
 </resources>
