--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -566,4 +566,6 @@
    <string name="device_long_time_ap">Le périphérique est en mode de réseau AP pendant de longues périodes, s’ il vous plaît redémarrez le périphérique et réessayez le réseau de distribution</string>
    <string name="current_ssid_is_not_correct">Le Wifi actuel n ’est pas un %1$s, veuillez paramétrer manuellement puis revenir à app</string>
     <string name="camera">Camera</string>
+    <string name="user_agreement_hint">User agreement</string>
+   <string name="privacy_policy_hint">Privacy policy</string>
 </resources>
