--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -566,4 +566,6 @@
    <string name="device_long_time_ap">設備は長い時間APネットワークモードにあります。設備を再起動してからネットワークを再構築してください</string>
    <string name="current_ssid_is_not_correct">現在WIFIは%1$sではありません。手動で設定してAPPに戻ってください。</string>
     <string name="camera">Camera</string>
+    <string name="user_agreement_hint">User agreement</string>
+   <string name="privacy_policy_hint">Privacy policy</string>
 </resources>
