--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -566,4 +566,6 @@
    <string name="device_long_time_ap">Innretningen har vært i AP-distribusjonsmodus i lang tid</string>
    <string name="current_ssid_is_not_correct">Nåværende WiFi er ikke %1$s, vennligst sett manuelt og vend tilbake til app</string>
    <string name="camera">Camera</string>
+    <string name="user_agreement_hint">User agreement</string>
+   <string name="privacy_policy_hint">Privacy policy</string>
 </resources>
