--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -566,4 +566,6 @@
    <string name="device_long_time_ap">Naprava je že dolgo v načinu distribucije AP. Prosim, ponovno zaženite napravo in poskusite distribucijo.</string>
    <string name="current_ssid_is_not_correct">Trenutni WiFi ni %1$s, prosim nastavite ročno in se vrnite na aplikacijo</string>
    <string name="camera">Camera</string>
+    <string name="user_agreement_hint">User agreement</string>
+   <string name="privacy_policy_hint">Privacy policy</string>
 </resources>
