--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -566,4 +566,6 @@
    <string name="device_long_time_ap">The device has been in AP distribution mode for a long time. Please restart the device and try the distribution again</string>
    <string name="current_ssid_is_not_correct">The current WiFi is not %1$s, please manually set and return to app</string>
     <string name="camera">Camera</string>
+    <string name="user_agreement_hint">User agreement</string>
+   <string name="privacy_policy_hint">Privacy policy</string>
 </resources>
