--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -562,4 +562,5 @@
    <string name="goto_set_wifi">Sett opp Wi Fi</string>
    <string name="device_long_time_ap">Innretningen har vært i AP-distribusjonsmodus i lang tid</string>
    <string name="current_ssid_is_not_correct">Nåværende WiFi er ikke %1$s, vennligst sett manuelt og vend tilbake til app</string>
+   <string name="no_equipment">No equipment</string>
 </resources>
